--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,15 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Socket.io Basics</title>
+	<title>Join chat</title>
 </head>
 <body>
+	<h1>Join Chat</h1>
 
-	<div class="messages">
-		<!-- Chat messages will go here -->
-	</div>
-
-	<form id="message-form">
-		<input type="text" name="message"/>
-		<input type="submit"/>
+	<form action="/chat.html">
+		<input type="text" name="name" placeholder="Enter your display name." />
+		<input type="submit" value="Join Chat"/>
 	</form>
 
-	<script src="/js/jquery-2.2.1.min.js"></script>
-	<script src="/js/socket.io-1.3.7.js"></script>
-	<script src="/js/moment.js"></script>
-	<script src="/js/QueryParams.js"></script>
-	<script src="/js/app.js"></script>
 </body>
 </html>
