Added support for separate chat rooms

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
 	<form action="/chat.html">
 		<input type="text" name="name" placeholder="Enter your display name." />
+		<!-- Add room input -->
+		<input type="text" name="room" placeholder="Enter the chat room you want to enter." />
 		<input type="submit" value="Join Chat"/>
 	</form>
 
