--- a/public/chat.html
+++ b/public/chat.html
@@ -3,20 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Socket.io Basics</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/chat.css">
 </head>
 <body>
-	<a href="/index.html">Change Settings</a>
 
-	<h1 class="room-title"><!-- Room name (use jQuery) --></h1>
+<section id="main">
 
-	<div class="messages">
-		<!-- Chat messages will go here -->
+	<div class="container clearfix">
+
+		<section id="sidebar">
+			<a id="change" href="/index.html">Change Rooms</a>
+
+			<h1 class="room-title"><!-- Room name (use jQuery) --></h1>
+		</section>
+		
+
+		<section id="chat">
+			<div class="messages">
+				<!-- Chat messages will go here -->
+			</div>
+
+			<form id="message-form">
+				<input id="userType" type="text" name="message" placeholder="Enter your message here." />
+				<input id="submit" type="submit" value="Send"/>
+			</form>
+
+		</section>
+
 	</div>
 
-	<form id="message-form">
-		<input type="text" name="message"/>
-		<input type="submit"/>
-	</form>
+</section>
 
 	<script src="/js/jquery-2.2.1.min.js"></script>
 	<script src="/js/socket.io-1.3.7.js"></script>
